Convert var declarations and List.of() to Java 8 compatible alternatives in McpAsyncClientResponseHandlerTests.java
Co-Authored-By: 于泽棋 <finyu@webank.com>